# opengl-render-engine

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: lint.yaml
assets/shaders/: pulse.frag.glsl
src/: engine  main.cpp
src/domain/: window.cpp  window.h
src/glfw/: window.h
src/graphics/: mesh.cpp  mesh.h
src/shader/: shader.cpp  shader.h
